--- a/CustomBMS/Pages/Shared/_Layout.cshtml
+++ b/CustomBMS/Pages/Shared/_Layout.cshtml
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.rtl.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CustomBMS.styles.css" asp-append-version="true" />
+
 </head>
-<body>
+<body class="bg-info">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 ">
             <div class="container">
                 <a class="navbar-brand " asp-area="" asp-page="/Index">سامانه مدیریت حساب بانکی</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -33,7 +34,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted bg-light">
         <div class="container">
             &copy; 2023 - CustomBMS - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
