--- a/CustomBMS/Pages/Debit.cshtml
+++ b/CustomBMS/Pages/Debit.cshtml
@@ -1,4 +1,21 @@
-﻿@page
+﻿@page "{id}"
 @model CustomBMS.Pages.DebitModel
 @{
+    Layout = "_LayoutAccount";
+    ViewData["UserId"] = $"{Model.CurentUserId}";
 }
+
+<Form method="post" asp-route-id="@Model.CurentUserId">
+    <div class="col-4">
+        <input asp-for="actionVM.amount" class="form-control m-2" placeholder="مبلغ واریز " aria-label="Fname">
+    </div>
+    <div class="col-4">
+        <input asp-for="actionVM.Description" class="form-control m-2" placeholder=" توضیحات " aria-label="Fname">
+    </div>
+    </div>
+    <div class="col-3">
+        <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-primary m-4">ثبت</button>
+        </div>
+    </div>
+</Form>
