--- a/CustomBMS/Pages/Index.cshtml
+++ b/CustomBMS/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class=" d-flex align-items-center justify-content-center" style="margin-top: 10%;">
-    <div class="col-xl-3 col-lg-3 col-md-5 col-sm-6 border border-1 rounded-3 p-4">
+    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-7  bg-light border border-dark border-1 rounded-3 p-4">
         <form method="post">
             <div class="row">
                 <div class="col-5">
